# relight.img

./: README.md  pyproject.toml  requirements.txt  test.py
app/: main.py  model.py
backend/: .gitignore
backend/app/: main.py
frontend/: README.md  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/components/: DownloadImage.tsx  ImagePicker.tsx
frontend/app/utils/: RelightImage.ts
