[project]
name = "relight-img"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.12"
dependencies = [
    "accelerate>=1.7.0",
    "diffusers>=0.33.1",
    "fastapi>=0.115.12",
    "pillow>=11.2.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.52.1",
    "uvicorn>=0.34.2",
]
